# tokyo

./: .gitignore  Cargo.toml  README.md  build.rs  run.sh
kernel/: Cargo.toml
kernel/src/: acpi.rs  ext.rs  framebuffer.rs  gdt.rs  graphics.rs  idt.rs  main.rs  mem.rs  serial.rs  text.rs
kernel/src/mem/: heap.rs  mod.rs
kernel/src/render/: mod.rs  pixel.rs  view.rs
src/: main.rs
